# vlitz

./: Cargo.toml  README.md
.github/workflows/: publish-crates.yml  release.yml
.sisyphus/: ralph-loop.local.md
plans/: vlitz-completion-plan.md
src/: agent.js
src/core/: actions.rs  manager.rs  mod.rs
src/gum/: commander.rs  handler.rs  memory.rs  mod.rs  navigator.rs  session.rs  session_tests.rs  store_tests.rs  vzdata.rs  vzdata_tests.rs
src/gum/commands/: disasm_cmds.rs  hook_cmds.rs  mod.rs  scan_cmds.rs
