[package]
name = "vlitz"
version = "0.1.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A dynamic debugger CLI built on Frida for runtime inspection and instrumentation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eunhhu/vlitz"
homepage = "https://github.com/eunhhu/vlitz"
documentation = "https://github.com/eunhhu/vlitz"
keywords = ["frida", "debugger", "instrumentation", "runtime", "analysis"]
categories = ["development-tools", "development-tools::debugging", "command-line-utilities"]
readme = "README.md"

[dependencies]
clap = { version = "4.5.38", features = ["derive", "unstable-styles"] }
clap_complete = "4.5.38"
clap_complete_fig = "4.5.2"
crossterm = "0.29.0"
ctrlc = "3.4.7"
frida = {version = "0.17.0", features = ["auto-download"]}
regex = "1.11.1"
rustyline = "17.0.1"
serde = "1.0.219"
serde_json = "1.0.140"
unicode-segmentation = "1.12.0"
strip-ansi-escapes = "0.2.1"
unicode-width = "0.2.0"
