[package]
name = "vlitz"
version = "0.2.2"
edition = "2021"
description = "A strong dynamic debugger CLI tool based on Frida"
license = "MIT"

[dependencies]
clap = { version = "4.5.38", features = ["derive", "unstable-styles"] }
clap_complete = "4.5.38"
clap_complete_fig = "4.5.2"
crossterm = "0.29.0"
ctrlc = "3.4.7"
frida = {version = "=0.17.0", features = ["auto-download"]}
frida-sys = "=0.17.0"
frida-build = "=0.17.0"
regex = "1.11.1"
rustyline = "17.0.1"
serde = "1.0.219"
serde_json = "1.0.140"
unicode-segmentation = "1.12.0"
strip-ansi-escapes = "0.2.1"
unicode-width = "0.2.0"
